--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,14 @@
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".ActivityRelativeMonthly"
             android:parentActivityName=".ActivityTrackRelative"/>
-        <activity android:name=".ActivityRelativeLineCategorywise" />
+        <activity android:name=".ActivityRelativeLineCategorywise"
+            android:parentActivityName=".ActivityRelativeCategorywise"/>
         <activity android:name=".ActivityRelativeCategorywise"
             android:parentActivityName=".ActivityTrackRelative"/>
         <activity android:name=".ActivityAddTarget"
             android:parentActivityName=".MainActivity"/>
-        <activity android:name=".ActivityViewAddCategory" />
-        <activity android:name=".ActivityRelativeLineMonthly" />
+        <activity android:name=".ActivityRelativeLineMonthly"
+            android:parentActivityName=".ActivityRelativeMonthly"/>
     </application>
 
 </manifest>
