--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/budget_manager_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityViewTarget"></activity>
+        <activity
+            android:name=".ActivityViewTarget"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ActivityAddExpense"
             android:parentActivityName=".MainActivity" />
