--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ActivityViewAllCategories"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
             android:name=".ActivityViewTarget"
             android:parentActivityName=".MainActivity" />
         <activity
