--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/budget_manager_launcher"
+        android:icon="@mipmap/app_logo_bm"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/budget_manager_launcher_round"
+        android:roundIcon="@mipmap/app_logo_bm"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
